cluster/website-deployment.yaml
# website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-website
  labels:
    app: simple-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-website
  template:
    metadata:
      labels:
        app: simple-website
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: website-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: website-content
        configMap:
          name: website-content
