cluster/website-service.yaml
# website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-website
spec:
  selector:
    app: simple-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
